# flaky

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
autopsy/: __init__.py  banner.py  cli.py  dashboard.py  db.py  fixer.py  models.py  runner.py  scorer.py  trends.py
docs/: demo.sh
tests/: test_ci.py  test_cli.py  test_db.py  test_fixer.py  test_fixer_model.py  test_history.py  test_ignore.py  test_runner.py  test_scorer.py  test_trends.py  test_watch.py
tests/fixtures/sample_suite/: test_edge_cases.py  test_flaky.py  test_network.py  test_ordering.py  test_stable.py
