[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flaky-test-autopsy"
version = "0.3.0"
description = "Detect flaky tests, classify root causes, get fix suggestions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
  {name = "Pranav", email = "pranavrao168@gmail.com"}
]
keywords = ["pytest", "testing", "flaky", "ci", "debugging"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Testing",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Environment :: Console",
]
dependencies = [
  "click>=8.0",
  "rich>=13.0",
  "pytest>=7.0",
  "pytest-randomly>=3.0",
  "pytest-json-report>=1.5",
  "anthropic>=0.25",
  "pyfiglet>=0.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov",
  "pytest-mock",
  "build",
  "twine",
  "pyyaml",
]

[project.urls]
Homepage = "https://github.com/PranavOaR/flaky"
Repository = "https://github.com/PranavOaR/flaky"
Documentation = "https://github.com/PranavOaR/flaky#readme"
Changelog = "https://github.com/PranavOaR/flaky/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/PranavOaR/flaky/issues"

[project.scripts]
autopsy = "autopsy.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["autopsy"]
