[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flaky-test-autopsy"
version = "0.3.0"
description = "Detect flaky tests, classify root causes, get fix suggestions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
  {name = "Pranav", email = "pranavrao168@gmail.com"}
]
keywords = ["pytest", "testing", "flaky", "ci", "debugging"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Testing",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Environment :: Console",
]
dependencies = [
  "click>=8.0",
  "rich>=13.0",
  "pytest>=7.0",
  "pytest-randomly>=3.0",
  "pytest-json-report>=1.5",
  "anthropic>=0.25",
  "pyfiglet>=0.8",
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov",
  "pytest-mock",
  "ruff>=0.4",
  "mypy>=1.10",
  "build",
  "twine",
  "pyyaml",
]

[project.urls]
Homepage = "https://github.com/PranavOaR/flaky"
Repository = "https://github.com/PranavOaR/flaky"
Documentation = "https://github.com/PranavOaR/flaky#readme"
Changelog = "https://github.com/PranavOaR/flaky/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/PranavOaR/flaky/issues"

[project.scripts]
autopsy = "autopsy.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["autopsy"]

# ── ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
  "E501",   # line too long — enforced by formatter, not linter
  "B008",   # function calls in default arg — used intentionally by Click
  "B904",   # raise-without-from-inside-except — too noisy for now
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]   # allow assert patterns and other test idioms

# ── mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = false     # anthropic SDK returns Any in places

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/fixtures"

# ── coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["autopsy"]
omit = ["autopsy/banner.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false

# ── example autopsy config (users put this in their own pyproject.toml) ───────
# [tool.autopsy]
# runs = 20
# workers = 4
# threshold = 0.05
# min_runs = 3
# model = "claude-opus-4-7"
